@@ -14,6 +14,10 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - Make pbs_server contact pbs_moms in the order in which they appear in the hierarchy
       in order to reduce errors on start-up of a large cluster.
   b - fix another possibility for deadlock with routing queues
+  e - Enabled the configuration to be able to write the path of the library directory
+      to /etc/ld.so.conf.d in a file named libtorque.conf. The file will be created
+      by default during make install. The configuration can be made to not install this
+      file by using the configure option --without-loadlibfile
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
